--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "symfony/yaml": "^3.2",
         "symfony/var-dumper": "^3.2",
         "twig/twig": "~2.0",
-        "doctrine/orm": "^2.5"
+        "doctrine/orm": "^2.5",
+        "filp/whoops": "^2.1"
     }
 }
